--- a/ice/education.css
+++ b/ice/education.css
@@ -34,7 +34,8 @@ p {
   font-size: 24px;
   margin-top: 30px;
   color: black;
-  list-style-position: inside;
+  display: inline-block;
+  text-align: left;
 }
 
 img {
