--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,96 +1,113 @@
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
 
+:root {
+  /* change the values below to your colors from your palette */
+  --primary-color: #396E94   ;
+  --secondary-color: #E7C24F ;
+  --accent1-color: #A42212;
+  --accent2-color: #40E0D0;
 
-#content {
-    max-width: 1600px;
-    margin: 0 auto;
-  }
-  
-  
-  /* Centering elements within their parent elements */
-  
-  nav a,
-  #hero-msg h1,
-  #hero-msg h4,
-  .button-box,
-  main section {
-    text-align: center;
-  }
-  
-  /* Adding a container for our message background */
-  
-  #background {
-    height: 725px;
-  }
-  
-  /* Setting background colors */
-  
-  body {
-    background-color: #f1f1f1;
-  }
-  
-  header {
-    background-color: #333;
-    color: #fff;
-  }
-  
-  nav {
-    background-color: #ddd;
-  }
-  
-  nav a:hover {
-    background-color: #bbb;
-  }
-  
-  #hero-msg {
-    background-color: #fff;
-  }
-  
-  #hero-msg h1 {
-    color: #333;
-  }
-  
-  #hero-msg h4 {
-    color: #666;
-  }
-  
-  .button-box {
-    background-color: #333;
-  }
-  
-  .button-box a {
-    color: #fff;
-  }
-  
-  .main-section {
-    background-color: #eee;
-  }
-  
-  .rapids-card {
-    background-color: #fff;
-  }
-  
-  .rapids-card h2 {
-    color: #333;
-  }
-  
-  .msg {
-    background-color: #f7f7f7;
-  }
-  
-  .msg h2 {
-    color: #333;
-  }
-  
-  .msg p {
-    color: #666;
-  }
-  
-  .msg a {
-    background-color: #333;
-    color: #fff;
-  }
-  
-  .mountains {
-    background-color: #ddd;
-  }
-  
+  /* change the values below to your chosen font(s) */
+  --heading-font: "Instrument Serif";
+  --paragraph-font: Sigmar, Roboto Slab, Rubik;
+
+  /* these colors below should be chosen from among your palette colors above */
+  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
+  --headline-color-on-color: #40E0D0; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #40E0D0; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #396E94  ;
+  --nav-link-color: #396E94;
+  --nav-background-color: #D4AC0D;
+  --nav-hover-link-color: #40E0D0;
+  --nav-hover-background-color: #396E94;
+}
+
+body{
+  background-color: (var(--primary-color));
+}
+#content{
+  max-width: 1600px;
+  margin: 0 auto;
+}
+
+header {
+  background-color: (var(--secondary-color));
+}
+
+.logo, .icon {
+  width: 80px;
+}
+
+nav a{
+  text-align: center;
+  color: (var(--nav-link-color));
+  text-decoration: (var(--nav-link-color));
+}
+nav a:hover {
+  background-color: (var(--nav-hover-background-color));
+  color: (var(--nav-hover-link-color));
+}
+
+#hero-img {
+  width: 100%;
+}
+#hero-msg h1, #hero-msg h4{
+  text-align: center;
+}
+
+.home-title {
+  color: (var(--headline-color-on-white));
+}
+
+h4 {
+  color: (var(--accent1-color));
+}
+
+.button-box{
+  text-align: center;
+}
+.book, .join {
+  background-color: (var(--paragraph-background-color));
+  color: (var(--secondary-color));
+  text-decoration: (var(--headline-color-on-color));
+}
+.book:hover, .join:hover {
+  background-color: (var(--nav-hover-link-color));
+  color: (var(--accent1-color));
+}
+
+main section{
+  text-align: center;  
+}
+
+#background {
+  height: 725px;
+  background-color: (var(--nav-background-color));
+}
+
+.msg {
+  background-color: (var(--paragraph-background-color));
+}
+.msg h2 {
+  color: (var(--accent1-color));
+}
+.msg p {
+  color: (var(--accent2-color));
+}
+
+footer {
+  background-color: (var(--secondary-color));
+  color: (var(--paragraph-color-on-white));
+}
+footer p {
+  font-size: 1.2em;
+}
+footer a {
+  color: (var(--paragraph-color-on-color));
+  text-decoration: (var(--headline-color-on-color));
+}
+footer p a:hover {
+  color: (var(--nav-hover-background-color));
+  text-decoration: (var(--nav-hover-link-color));
+}
