--- a/ice/challange5.css
+++ b/ice/challange5.css
@@ -13,8 +13,7 @@
   .bottom-images {
     display: flex;
     justify-content: center;
-    margin-top: 60px;
-    margin-bottom: 60px;
+    padding: 3%;
 
   }
   
