--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -24,7 +24,7 @@
 }
 
 body{
-  background-color: (var(--primary-color));
+  background-color: var(--primary-color);
 }
 #content{
   max-width: 1600px;
@@ -32,7 +32,7 @@ body{
 }
 
 header {
-  background-color: (var(--secondary-color));
+  background-color: var(--secondary-color);
 }
 
 .logo, .icon {
@@ -41,12 +41,12 @@ header {
 
 nav a{
   text-align: center;
-  color: (var(--nav-link-color));
-  text-decoration: (var(--nav-link-color));
+  color: var(--nav-link-color);
+  text-decoration: var(--nav-link-color);
 }
 nav a:hover {
-  background-color: (var(--nav-hover-background-color));
-  color: (var(--nav-hover-link-color));
+  background-color: var(--nav-hover-background-color);
+  color: var(--nav-hover-link-color);
 }
 
 #hero-img {
@@ -57,24 +57,24 @@ nav a:hover {
 }
 
 .home-title {
-  color: (var(--headline-color-on-white));
+  color: var(--headline-color-on-white);
 }
 
 h4 {
-  color: (var(--accent1-color));
+  color: var(--accent1-color);
 }
 
 .button-box{
   text-align: center;
 }
 .book, .join {
-  background-color: (var(--paragraph-background-color));
-  color: (var(--secondary-color));
-  text-decoration: (var(--headline-color-on-color));
+  background-color: var(--paragraph-background-color);
+  color: var(--secondary-color);
+  text-decoration: var(--headline-color-on-color);
 }
 .book:hover, .join:hover {
-  background-color: (var(--nav-hover-link-color));
-  color: (var(--accent1-color));
+  background-color: var(--nav-hover-link-color);
+  color: var(--accent1-color);
 }
 
 main section{
@@ -83,31 +83,31 @@ main section{
 
 #background {
   height: 725px;
-  background-color: (var(--nav-background-color));
+  background-color: var(--nav-background-color);
 }
 
 .msg {
-  background-color: (var(--paragraph-background-color));
+  background-color: var(--paragraph-background-color);
 }
 .msg h2 {
-  color: (var(--accent1-color));
+  color: var(--accent1-color);
 }
 .msg p {
-  color: (var(--accent2-color));
+  color: var(--accent2-color);
 }
 
 footer {
-  background-color: (var(--secondary-color));
-  color: (var(--paragraph-color-on-white));
+  background-color: var(--secondary-color);
+  color: var(--paragraph-color-on-white);
 }
 footer p {
   font-size: 1.2em;
 }
 footer a {
-  color: (var(--paragraph-color-on-color));
-  text-decoration: (var(--headline-color-on-color));
+  color: var(--paragraph-color-on-color);
+  text-decoration: var(--headline-color-on-color);
 }
 footer p a:hover {
-  color: (var(--nav-hover-background-color));
-  text-decoration: (var(--nav-hover-link-color));
+  color: var(--nav-hover-background-color);
+  background-color: var(--nav-hover-link-color);
 }
