changes to fonts

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -25,7 +25,12 @@
 
 body{
   background-color: var(--primary-color);
+  font-family: 'Lato', Arial, sans-serif;
+  font-size: 22px;
+  margin: 0;
+  padding: 0;
 }
+
 #content{
   max-width: 1600px;
   margin: 0 auto;
@@ -33,6 +38,8 @@ body{
 
 header {
   background-color: var(--secondary-color);
+  margin: 0;
+  padding: 0;
 }
 
 .logo, .icon {
@@ -42,7 +49,8 @@ header {
 nav a{
   text-align: center;
   color: var(--nav-link-color);
-  text-decoration: var(--nav-link-color);
+  text-decoration: none;
+  padding: 35px;
 }
 nav a:hover {
   background-color: var(--nav-hover-background-color);
@@ -52,12 +60,15 @@ nav a:hover {
 #hero-img {
   width: 100%;
 }
+
 #hero-msg h1, #hero-msg h4{
   text-align: center;
 }
 
 .home-title {
   color: var(--headline-color-on-white);
+  font-family: 'Instrument Serif', cursive;
+  font-size: 2em;
 }
 
 h4 {
@@ -70,7 +81,11 @@ h4 {
 .book, .join {
   background-color: var(--paragraph-background-color);
   color: var(--secondary-color);
-  text-decoration: var(--headline-color-on-color);
+  text-decoration: none;
+  font-size: 18px;
+  padding: 15px 30px;
+  margin-top: 50px;
+  font-family: 'Lato', Arial, sans-serif;
 }
 .book:hover, .join:hover {
   background-color: var(--nav-hover-link-color);
@@ -88,26 +103,14 @@ main section{
 
 .msg {
   background-color: var(--paragraph-background-color);
+  line-height: 1.5em;
+  padding: 35px;
 }
 .msg h2 {
   color: var(--accent1-color);
+  font-family: 'Rock Salt', 'Bradley Hand', sans-serif;
 }
 .msg p {
   color: var(--accent2-color);
-}
-
-footer {
-  background-color: var(--secondary-color);
-  color: var(--paragraph-color-on-white);
-}
-footer p {
-  font-size: 1.2em;
-}
-footer a {
-  color: var(--paragraph-color-on-color);
-  text-decoration: var(--headline-color-on-color);
-}
-footer p a:hover {
-  color: var(--nav-hover-background-color);
-  background-color: var(--nav-hover-link-color);
+  font-size: 0.8em;
 }
