--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -46,6 +46,10 @@ header {
   width: 80px;
 }
 
+nav {
+  display: flex;
+  justify-content: space-around;
+}
 nav a{
   text-align: center;
   color: var(--nav-link-color);
@@ -57,12 +61,61 @@ nav a:hover {
   color: var(--nav-hover-link-color);
 }
 
+#logo_link {
+  padding-top: 5px;
+  justify-self: center;
+  align-self: center;
+}
+
+#hero {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  margin-top: -100px; 
+}
+#hero-box {
+  grid-column: 1/4;
+  grid-row: 1/3;
+  z-index: -1;
+}
+
 #hero-img {
   width: 100%;
 }
-
 #hero-msg h1, #hero-msg h4{
   text-align: center;
+  color: white;
+  grid-column: 2/3;
+  grid-row: 1/2;
+  margin-top: 100px;
+}
+
+.card-img, .mountains {
+  width: 100%;
+}
+
+.rivers-card {
+  grid-column: 2/4;
+  grid-row: 2/3;
+}
+
+.camping-card {
+  grid-column: 5/7;
+  grid-row: 2/3;
+}
+
+.rapids-card {
+  grid-column: 8/10;
+  grid-row: 2/3;
+}
+
+#background {
+  grid-column: 1/11;
+  grid-row: 4/10;
+}
+
+.mountains {
+  grid-column: 2/7;
+  grid-row: 5/8;
 }
 
 .home-title {
@@ -105,6 +158,8 @@ main section{
   background-color: var(--paragraph-background-color);
   line-height: 1.5em;
   padding: 35px;
+  grid-column: 6/10;
+  grid-row: 6/7;
 }
 .msg h2 {
   color: var(--accent1-color);
@@ -113,4 +168,24 @@ main section{
 .msg p {
   color: var(--accent2-color);
   font-size: 0.8em;
+}
+
+footer {
+  background-color: #6f7364;
+  padding: 25px 50px;
+  margin-top: 200px; 
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.card-img {
+  border: 10px solid #d9c2a3;
+  transition: transform .5s;
+  box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover {
+  opacity: .6;
+  transform: scale(1.1);
 }
