--- a/totkconstructs/styles/site-plan.css
+++ b/totkconstructs/styles/site-plan.css
@@ -5,25 +5,25 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #82E0AA   ;
+  --secondary-color: #F4D03F ;
+  --accent1-color: #196F3D;
+  --accent2-color: #027381;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "IM Fell French Canon SC";
   --paragraph-font: Lato, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --headline-color-on-white: #82E0AA;  /* headlines on a white background */ 
+  --headline-color-on-color: #F4D03F; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #82E0AA; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #F4D03F; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #82E0AA  ;
+  --nav-link-color: #82E0AA;
+  --nav-background-color: #027381;
+  --nav-hover-link-color: #F4D03F;
+  --nav-hover-background-color: #82E0AA;
 }
 
 
