--- a/totkconstructs/styles/main.css
+++ b/totkconstructs/styles/main.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Hylia;
+  src: url(/totkconstructs/hylia-serif/Hylia\ Serif\ Beta\ v0-009/) format('truetype');
+}
+
 body {
   margin: 0;
 }
@@ -28,6 +33,7 @@ body {
   margin: 0 200px; /* Increase the margin for more space */
   margin-left: 50px;
   font-size: 200%;
+  font-family: Hylia,sans-serif;
 }
 
 .grid-container {
