--- a/totkconstructs/styles/main.css
+++ b/totkconstructs/styles/main.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: Hylia;
-  src: url(/totkconstructs/hylia-serif/Hylia\ Serif\ Beta\ v0-009/) format('truetype');
+  font-family: 'Hylia';
+  src: url(/totkconstructs/hylia-serif/HyliaSerifBeta-Regular.otf) format('truetype');
 }
 
 body {
@@ -24,19 +24,20 @@ body {
 .nav-links {
   display: flex;
   justify-content: center;
-  flex-grow: 1; /* Expand the remaining space to center the links */
+  flex-grow: 1;
 }
 
 .nav-links a {
   color: black;
   text-decoration: none;
-  margin: 0 200px; /* Increase the margin for more space */
+  margin: 0 200px;
   margin-left: 50px;
   font-size: 200%;
-  font-family: Hylia,sans-serif;
+  font-family: 'Hylia';
   padding: 15px 30px;
 }
-.nav-links a:hover{
+
+.nav-links a:hover {
   background-color: #F4D03F;
   color: black;
 }
@@ -47,7 +48,8 @@ body {
   height: 100vh;
 }
 
-.left-side, .right-side {
+.left-side,
+.right-side {
   background-color: #027381;
 }
 
@@ -66,20 +68,15 @@ body {
   margin-top: 20px;
   color: #F4D03F;
   align-self: center;
+  font-family: 'Hylia';
 }
 
 .welcome-message {
   font-size: 20px;
   margin-top: 10px;
-  margin-bottom: 20px; /* Adjust the margin-bottom value as needed */
-}
-.welcome-message-example {
-  font-size: 20px;
-  margin-top: 10px;
   margin-bottom: 20px;
-  align-self: flex-start;
-  width: 50%;
 }
+
 .subtitle {
   font-size: 24px;
   align-self: center;
@@ -90,18 +87,92 @@ body {
   margin-left: 25%;
 }
 
-.trasnportation1 {
-  max-width: 50%;
-  margin-right: 50%;
+.slideshow-container {
+  position: relative;
+  max-width: 1000px;
+  margin: auto;
 }
 
-.example {
-  max-width: 50%;
-  margin-left: 50%;
+.mySlides {
+  display: none;
+}
+
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+  background-color: #717171;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .footer {
-  background-color: #82E0AA; /* Same color as the header */
+  background-color: #82E0AA;
   padding: 50px;
   text-align: center;
 }
