--- a/totkconstructs/styles/main.css
+++ b/totkconstructs/styles/main.css
@@ -24,20 +24,19 @@ body {
 .nav-links {
   display: flex;
   justify-content: center;
-  flex-grow: 1;
+  flex-grow: 1; /* Expand the remaining space to center the links */
 }
 
 .nav-links a {
   color: black;
   text-decoration: none;
-  margin: 0 200px;
+  margin: 0 200px; /* Increase the margin for more space */
   margin-left: 50px;
   font-size: 200%;
   font-family: 'Hylia';
   padding: 15px 30px;
 }
-
-.nav-links a:hover {
+.nav-links a:hover{
   background-color: #F4D03F;
   color: black;
 }
@@ -48,8 +47,7 @@ body {
   height: 100vh;
 }
 
-.left-side,
-.right-side {
+.left-side, .right-side {
   background-color: #027381;
 }
 
@@ -74,9 +72,15 @@ body {
 .welcome-message {
   font-size: 20px;
   margin-top: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 20px; /* Adjust the margin-bottom value as needed */
 }
-
+.welcome-message-example {
+  font-size: 20px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  align-self: flex-start;
+  width: 50%;
+}
 .subtitle {
   font-size: 24px;
   align-self: center;
@@ -87,18 +91,44 @@ body {
   margin-left: 25%;
 }
 
+.trasnportation1 {
+  max-width: 50%;
+  margin-right: 50%;
+}
+
+.example {
+  max-width: 50%;
+  margin-left: 50%;
+}
+
+.footer {
+  background-color: #82E0AA; /* Same color as the header */
+  padding: 50px;
+  text-align: center;
+}
+
+.contact-link {
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+  margin-right: 50px;
+}
+
+
+/* Slideshow container */
 .slideshow-container {
-  position: relative;
   max-width: 1000px;
+  position: relative;
   margin: auto;
 }
 
+/* Hide the images by default */
 .mySlides {
   display: none;
 }
 
-.prev,
-.next {
+/* Next & previous buttons */
+.prev, .next {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -113,16 +143,18 @@ body {
   user-select: none;
 }
 
+/* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
 }
 
+/* Caption text */
 .text {
   color: #f2f2f2;
   font-size: 15px;
@@ -133,6 +165,7 @@ body {
   text-align: center;
 }
 
+/* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
@@ -141,6 +174,7 @@ body {
   top: 0;
 }
 
+/* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
   height: 15px;
@@ -152,34 +186,17 @@ body {
   transition: background-color 0.6s ease;
 }
 
-.active,
-.dot:hover {
+.active, .dot:hover {
   background-color: #717171;
 }
 
+/* Fading animation */
 .fade {
   animation-name: fade;
   animation-duration: 1.5s;
 }
 
 @keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-.footer {
-  background-color: #82E0AA;
-  padding: 50px;
-  text-align: center;
-}
-
-.contact-link {
-  color: black;
-  text-decoration: none;
-  font-size: 18px;
-  margin-right: 50px;
+  from {opacity: .4}
+  to {opacity: 1}
 }
